# Customer-Support-Agent

./: .gitignore  .pre-commit-config.yaml  DECISIONS.md  DEPLOY.md  README.md  docker-compose.yml  environment.yml  render.yaml
.github/workflows/: ci.yml  evals.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: context.py  graph.py  nodes.py  prompts.py  state.py  streaming.py  tools.py
backend/app/api/: admin.py  chat.py  schemas.py
backend/app/core/: config.py  observability.py  policy.py  pricing.py  security.py
backend/app/data/: crm_seed.json  refund_policy.md
backend/app/db/: database.py  models.py  seed.py  seed_demo_runs.py
backend/evals/: README.md  judge.py  runner.py  scenarios.json
backend/notebooks/: backend_walkthrough.ipynb
backend/tests/: conftest.py  test_agent.py  test_policy.py  test_security.py
docs/: architecture.html  flow.html
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/api/chat/stream/: route.ts
frontend/components/: ChatWindow.tsx  EscalationsPanel.tsx  RunsTable.tsx  TraceViewer.tsx
frontend/lib/: api.ts
